// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPageHeader is rendered 1`] = `
<header
  aria-label="aria-label"
  class="euiPageHeader testClass1 testClass2 emotion-euiPageHeader-transparent-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="emotion-euiPageHeaderContent"
  >
    <div
      class="css-acb1mh-flex-center"
    >
      Anything
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props alignItems bottom is rendered 1`] = `
<header
  class="euiPageHeader emotion-euiPageHeader-transparent"
>
  <div
    class="euiPageHeaderContent emotion-euiPageHeaderContent"
  >
    <div
      class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-flexEnd-row-euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
      >
        <h1
          class="euiTitle emotion-euiTitle-l"
        >
          Page title
        </h1>
      </div>
      <div
        class="euiFlexGroup emotion-euiFlexGroup-wrap-m-flexStart-stretch-row-euiPageHeaderContent__rightSideItems"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
        >
          <button>
            Button 2
          </button>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
        >
          <button>
            Button 1
          </button>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props alignItems center is rendered 1`] = `
<header
  class="euiPageHeader emotion-euiPageHeader-transparent"
>
  <div
    class="euiPageHeaderContent emotion-euiPageHeaderContent"
  >
    <div
      class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-center-row-euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
      >
        <h1
          class="euiTitle emotion-euiTitle-l"
        >
          Page title
        </h1>
      </div>
      <div
        class="euiFlexGroup emotion-euiFlexGroup-wrap-m-flexStart-stretch-row-euiPageHeaderContent__rightSideItems"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
        >
          <button>
            Button 2
          </button>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
        >
          <button>
            Button 1
          </button>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props alignItems stretch is rendered 1`] = `
<header
  class="euiPageHeader emotion-euiPageHeader-transparent"
>
  <div
    class="euiPageHeaderContent emotion-euiPageHeaderContent"
  >
    <div
      class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
      >
        <h1
          class="euiTitle emotion-euiTitle-l"
        >
          Page title
        </h1>
      </div>
      <div
        class="euiFlexGroup emotion-euiFlexGroup-wrap-m-flexStart-stretch-row-euiPageHeaderContent__rightSideItems"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
        >
          <button>
            Button 2
          </button>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
        >
          <button>
            Button 1
          </button>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props alignItems top is rendered 1`] = `
<header
  class="euiPageHeader emotion-euiPageHeader-transparent"
>
  <div
    class="euiPageHeaderContent emotion-euiPageHeaderContent"
  >
    <div
      class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-flexStart-row-euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
      >
        <h1
          class="euiTitle emotion-euiTitle-l"
        >
          Page title
        </h1>
      </div>
      <div
        class="euiFlexGroup emotion-euiFlexGroup-wrap-m-flexStart-stretch-row-euiPageHeaderContent__rightSideItems"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
        >
          <button>
            Button 2
          </button>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
        >
          <button>
            Button 1
          </button>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props bottomBorder is rendered as extended 1`] = `
<header
  class="euiPageHeader emotion-euiPageHeader-border-transparent"
>
  <div
    class="euiPageHeaderContent emotion-euiPageHeaderContent"
  >
    <div
      class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
      />
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props bottomBorder is rendered as true 1`] = `
<header
  class="euiPageHeader emotion-euiPageHeader-transparent"
>
  <div
    class="euiPageHeaderContent emotion-euiPageHeaderContent-border-l"
  >
    <div
      class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
      />
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props page content props are passed down is rendered 1`] = `
<header
  class="euiPageHeader emotion-euiPageHeader-transparent"
>
  <div
    class="euiPageHeaderContent emotion-euiPageHeaderContent-border"
  >
    <nav
      aria-label="aria-label"
      class="euiBreadcrumbs testClass1 testClass2 emotion-euiTestCss"
      data-test-subj="test subject string"
    >
      <ol
        class="euiBreadcrumbs__list emotion-euiBreadcrumbs__list-isTruncated"
      >
        <li
          class="euiBreadcrumb emotion-euiBreadcrumb-page-isTruncated"
          data-test-subj="euiBreadcrumb"
        >
          <a
            class="euiLink euiBreadcrumb__content customClass emotion-euiLink-primary-euiBreadcrumb__content-page-isTruncated-isInteractive"
            data-test-subj="breadcrumbsAnimals"
            href="#"
            rel="noreferrer"
            title="Animals"
          >
            Animals
          </a>
        </li>
        <li
          class="euiBreadcrumb emotion-euiBreadcrumb-page-isTruncated"
          data-test-subj="euiBreadcrumb"
        >
          <span
            aria-current="page"
            class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-isTruncatedLast"
            title="Edit"
          >
            Edit
          </span>
        </li>
      </ol>
    </nav>
    <div
      class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
    />
    <div
      class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
      >
        <h1
          aria-label="aria-label"
          class="euiTitle testClass1 testClass2 emotion-euiTitle-l-euiTestCss"
          data-test-subj="test subject string"
        >
          <span
            class="testClass1 testClass2 emotion-euiPageHeaderContent__titleIcon-euiTestCss"
            data-euiicon-type="logoKibana"
            data-test-subj="test subject string"
          >
            aria-label
          </span>
          Page title
        </h1>
        <div
          class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
        />
        <div
          class="euiText emotion-euiText-constrainedWidth-m"
        >
          <p>
            Description
          </p>
        </div>
        <div
          class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
        />
        <p>
          Anything
        </p>
      </div>
      <div
        aria-label="aria-label"
        class="euiFlexGroup testClass1 testClass2 emotion-euiFlexGroup-responsive-wrap-m-flexStart-stretch-row-euiPageHeaderContent__rightSideItems-euiTestCss"
        data-test-subj="test subject string"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
        >
          <button>
            Button 2
          </button>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
        >
          <button>
            Button 1
          </button>
        </div>
      </div>
    </div>
    <div
      class="euiPageHeaderContent__bottom"
    >
      <div
        class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
      />
      <div
        aria-label="aria-label"
        class="euiTabs testClass1 testClass2 emotion-euiTabs-m-euiTestCss"
        data-test-subj="test subject string"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="euiTab euiTab-isSelected emotion-euiTab-selected"
          role="tab"
          tabindex="0"
          type="button"
        >
          <span
            class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
          >
            Tab 1
          </span>
        </button>
        <button
          aria-selected="false"
          class="euiTab emotion-euiTab"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
          >
            Tab 2
          </span>
        </button>
      </div>
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props responsive is rendered as false 1`] = `
<header
  class="euiPageHeader emotion-euiPageHeader-transparent"
>
  <div
    class="euiPageHeaderContent emotion-euiPageHeaderContent"
  >
    <div
      class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
      />
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props responsive is rendered as reverse 1`] = `
<header
  class="euiPageHeader emotion-euiPageHeader-transparent"
>
  <div
    class="euiPageHeaderContent emotion-euiPageHeaderContent"
  >
    <div
      class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
      />
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props restrictWidth is rendered as custom 1`] = `
<header
  class="euiPageHeader emotion-euiPageHeader-transparent"
>
  <div
    class="euiPageHeaderContent emotion-euiPageHeaderContent"
    style="max-width: 100px;"
  >
    <div
      class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
      />
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props restrictWidth is rendered as true 1`] = `
<header
  class="euiPageHeader emotion-euiPageHeader-transparent"
>
  <div
    class="euiPageHeaderContent emotion-euiPageHeaderContent"
    style="max-width: 1200px;"
  >
    <div
      class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
      />
    </div>
  </div>
</header>
`;
